# spore-meta

./: .clang-format  CMakeLists.txt  README  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
cmake/: SporeMeta.cmake
codegen/: codegen.yml.in
codegen/templates/: meta.hpp.inja  meta.inl.inja  meta_attribute.inja
examples/: CMakeLists.txt
examples/adl/: CMakeLists.txt
examples/adl/include/spore/examples/: adl.hpp
examples/adl/src/: main.cpp
examples/extensions/: CMakeLists.txt
examples/extensions/codegen/: meta_extensions.inja
examples/extensions/include/spore/examples/: extensions.hpp
examples/extensions/src/: main.cpp
examples/hello-world/: CMakeLists.txt
examples/hello-world/include/spore/examples/: hello_world.hpp
examples/hello-world/src/: main.cpp
examples/implicit/: CMakeLists.txt
examples/implicit/include/spore/examples/: implicit.hpp
examples/implicit/src/: main.cpp
examples/json/: CMakeLists.txt
examples/json/include/spore/examples/: json.hpp
examples/json/src/: main.cpp
examples/registration/: CMakeLists.txt
examples/registration/include/spore/examples/: registration.hpp  registry.hpp
examples/registration/src/: main.cpp
examples/templates/: CMakeLists.txt
examples/templates/include/spore/examples/: templates.hpp
examples/templates/src/: main.cpp
include/spore/: meta.hpp
include/spore/meta/: .gitignore  meta.hpp  meta_accessors.hpp  meta_adl.hpp  meta_argument.hpp  meta_attribute.hpp  meta_base.hpp  meta_codegen.hpp  meta_constant.hpp  meta_constructor.hpp  meta_constructor_traits.hpp  meta_enabled.hpp  meta_enum.hpp  meta_enum_value.hpp  meta_extension.hpp  meta_field.hpp  meta_field_traits.hpp  meta_function.hpp  meta_function_traits.hpp  meta_function_utils.hpp  meta_init.hpp  meta_invalid.hpp  meta_invocable.hpp  meta_macros.hpp  meta_name.hpp  meta_parameter.hpp  meta_params.hpp  meta_placeholder.hpp  meta_result.hpp  meta_string.hpp  meta_string_convert.hpp  meta_string_convert.inl  meta_truthy.hpp  meta_tuple.hpp  meta_type.hpp  meta_type_id.hpp  meta_type_ref.hpp  meta_type_utils.hpp  meta_utils.hpp  meta_version.hpp.in
include/spore/meta/codegen/: meta_codegen_detail.hpp  meta_codegen_utils.hpp
include/spore/meta/extra/: meta_std_types.hpp
include/spore/meta/extras/: meta_detail_macros.hpp  meta_extra_type_registration.hpp  meta_extras_macros.hpp  meta_extras_std_types.hpp  meta_std_types.hpp
src/: CMakeLists.txt
